--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -52,7 +52,7 @@
     "reflect-metadata": "^0.1.12",
     "request-promise": "^4.2.2",
     "sparkpost": "^2.1.2",
-    "typeorm": "0.2.0",
+    "typeorm": "0.2.24",
     "uuid": "^3.2.1",
     "yup": "^0.24.1"
   },
@@ -62,6 +62,7 @@
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
+    "testEnvironment": "node",
     "globalSetup": "./src/testUtils/callSetup.js",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
