--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,12 +14,14 @@
     "@types/react-dom": "^16.9.0",
     "antd": "^4.1.1",
     "apollo-boost": "^0.4.7",
+    "formik": "^2.1.4",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "PORT=3721 react-scripts start",
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.3"
+    "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.34"
   }
 }
