--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,4 +1,18 @@
 {
   "name": "@airbnb-clone/common",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "scripts": {
+    "build": "rimraf ./dist && tsc"
+  },
+  "main":"dist/index.js",
+  "typing":"dist/index.d.ts",
+  "license": "MIT",
+  "dependencies": {
+    "yup": "~0.28.3"
+  },
+  "devDependencies": {
+    "typescript": "~3.8.3",
+    "@types/yup": "~0.26.34",
+    "rimraf": "^3.0.2"
+  }
 }
