--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2",
-    "yup": "^0.28.3"
+    "yup": "^0.28.3",
+    "@airbnb-clone/common": "1.0.0"
   },
   "scripts": {
     "start": "PORT=3721 react-scripts start",
