--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2",
     "yup": "^0.28.3",
-    "@airbnb-clone/common": "1.0.0"
+    "@airbnb-clone/common": "1.0.0",
+    "@airbnb-clone/controller": "1.0.0"
   },
   "scripts": {
     "start": "PORT=3721 react-scripts start",
