--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -4,20 +4,23 @@
   "scripts": {
     "build": "rimraf ./dist && tsc"
   },
-  "main":"dist/index.js",
-  "typing":"dist/index.d.ts",
+  "main": "dist/index.js",
+  "typing": "dist/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "graphql": "^0.13.2",
+    "@apollo/react-hooks": "^3.1.4",
+    "apollo-boost": "^0.4.7",
+    "react-apollo": "~3.1.4",
+    "graphql": "^15.0.0",
     "graphql-tag": "^2.9.2",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "10.2.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-router-dom": "^5.1.2"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.31",
